k8s/apps/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: filebrowser
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-internal
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: filebrowser
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
