k8s/apps/filebrowser/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "filebrowser.k8s.nyumbani.home"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: filebrowser
          port: 80
